# phorest_utils

./: .gitignore  LICENCE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
phorest_utils/: __main__.py
phorest_utils/fritzbox/: phonebook_export.py
phorest_utils/fritzbox/jinja-templates/: fritzbox_xml_template.jinja
phorest_utils/phorest_api/: phorest_api.py
